# vcpkg-bug-repro

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  justfile  vcpkg.json
